# yocto-embedded-tools

./: README.en.md  README.md
build_tools/: README
build_tools/gcc-tools/: README.md  main.py
config/arm/: defconfig-kernel
config/arm64/: defconfig-busybox  defconfig-kernel
config/x86/: defconfig-kernel
cross_tools/: README.md  prepare.sh
cross_tools/configs/: config.xml  config_aarch64  config_aarch64-musl  config_arm32  config_riscv64  config_x86_64
cross_tools/patches/: glibc-fix-missing-convert-scm-timestamps.patch
dockerfile/: Dockerfile  Dockerfile_CI  qemu_test_dockerfile
dsoftbus/bounds_checking_function/: 0001-Adaptation-for-dsoftbus.patch
dsoftbus/build_tools/: README  gn-linux-x86-1717.tar.gz.sha256  ninja-linux-x86-1.10.1.tar.gz.sha256
dsoftbus/depend/: BUILD.gn  ohos.build
dsoftbus/depend/device_auth/: device_auth.c
dsoftbus/depend/device_auth/include/: device_auth.h
dsoftbus/depend/hilog/: hilog.c
dsoftbus/depend/hilog/include/hilog/: log.h
dsoftbus/depend/hilog/include/hilog_base/: log_base.h
dsoftbus/depend/ipc/: ipc_center.cpp  ipc_object_stub.cpp  ipc_skeleton.cpp  iremote_object.cpp  message_parcel.cpp
dsoftbus/depend/ipc/include/: depend.h  ipc_base.h  ipc_center.h  ipc_object_stub.h  ipc_skeleton.h  iremote_broker.h  iremote_object.h  iremote_parcel.h  iremote_proxy.h  iremote_stub.h  message_option.h  message_parcel.h  system_ability.h  system_ability_definition.h
dsoftbus/depend/syspara/: syspara.c
dsoftbus/depend/syspara/include/: parameter.h
dsoftbus/hichain/deviceauth/: 0001-support-deviceauth-for-openeuler.patch  0002-adapter-deviceauth-ipc-service.patch  0003-simplify-dependency-on-third-party-packages.patch
dsoftbus/hichain/huks/: 0001-support-huks-for-openeuler.patch  0002-simplify-dependency-on-third-party-packages.patch
dsoftbus/test/: softbus_main.cpp
dsoftbus/utils/: 0001-Adaptation-for-dsoftbus.patch
mcs/: CMakeLists.txt  README.md
mcs/dev_mcsmem/: Makefile  dev_mcsmem.c
mcs/kernel_cpu_handler/: Makefile  cpu_handler_dev.c
mcs/latency_demo/: rpmsg_main.c
mcs/mcs_km/: mcs_km.c
mcs/modules/: openamp_module.c  openamp_module.h  remoteproc_module.c  remoteproc_module.h  rpmsg_module.c  rpmsg_module.h  rpmsg_pty.c  rpmsg_pty.h  virtio_module.c  virtio_module.h
mcs/openamp_demo/: Makefile  rpmsg-internal.h  rpmsg_app.c  rpmsg_main.c  rpmsg_ping.c
mcs/openamp_demo_proc_ptyshell/: Makefile  rpmsg-internal.h  rpmsg_linux_endpoint.c  rpmsg_main.c  rpmsg_rtos_endpoint.c
mcs/openamp_demo_proc_rsctbl/: rpmsg-internal.h  rpmsg_linux_endpoint.c  rpmsg_main.c  rpmsg_rtos_endpoint.c
mcs/openamp_demo_pty_multithread/: Makefile  rpmsg-internal.h  rpmsg_main.c  rpmsg_ping.c  rpmsg_pty.c
mcs/rpmsg_pty_demo/: rpmsg_main.c  rpmsg_pty.c  rpmsg_pty.h
mcs/zephyr/: zephyr.elf
patches/arm64/: 0001-arm64-add-zImage-support-for-arm64.patch
ros_depends/: src.txt  src_helper.sh
test_tools/: ci_test.sh
(+2 files in other folders)
