import("//build/ohos.gni")

config("hilog_config") {
  include_dirs = [ 
    "hilog/include",
    "//third_party/bounds_checking_function/include",
  ]
}

ohos_shared_library("libhilog") {
  public_configs = [ ":hilog_config" ]
  sources = [
    "hilog/hilog.c",
  ]
  deps = [
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}

config("ipc_config") {
  include_dirs = [ "ipc/include", "//utils/native/base/include" ]
}

group("ipc_single") {
  deps = [ "//depend:ipc_core" ]
  public_configs = [ ":ipc_config" ]
}

ohos_shared_library("ipc_core") {
  include_dirs = [
    "ipc/include",
  ]

  sources = [
    "ipc/ipc_center.cpp",
    "ipc/ipc_object_stub.cpp",
    "ipc/ipc_skeleton.cpp",
    "ipc/iremote_object.cpp",
    "ipc/message_parcel.cpp",
  ]

  deps = [
    "//utils/native/base:utils",
  ]

  public_configs = [ ":ipc_config" ]
}

group("system_ability_fwk") {
}

group("samgr_proxy") {
}

group("libpermissionsdk_standard") {
}

group("cesfwk_innerkits") {
}

group("want") {
}

group("appexecfwk_core") {
}

group("libaccesstoken_sdk") {
}
