import("//build/ohos.gni")

config("hilog_config") {
  include_dirs = [ 
    "hilog/include",
    "//third_party/bounds_checking_function/include",
  ]
}

ohos_shared_library("libhilog") {
  public_configs = [ ":hilog_config" ]
  sources = [
    "hilog/hilog.c",
  ]
  deps = [
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}

group("system_ability_fwk") {
}

group("samgr_proxy") {
}

group("libpermissionsdk_standard") {
}

group("cesfwk_innerkits") {
}

group("want") {
}

group("appexecfwk_core") {
}

group("libaccesstoken_sdk") {
}

config("syspara_config") {
  include_dirs = [
    "syspara/include",
  ]
}

ohos_shared_library("syspara") {
  include_dirs = [
    "syspara/include",
  ]
  sources = [
    "syspara/syspara.c",
  ]
  public_configs = [ ":syspara_config" ]
  deps = [
    "//third_party/bounds_checking_function:libsec_shared",
    "//third_party/mbedtls:mbedtls_shared",
  ]
}
